--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "autoforceapp",
-    "slug": "autoforceapp",
+    "name": "autoforceappnew",
+    "slug": "autoforceappnew",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,6 +27,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "- Adicionado responsividade em algumas div's\n- Adicionado ScrollView\n- Adicionado botão do WhatsApp",
+    "githubUrl": "https://github.com/allandxsh/autoforcechallenge"
   }
 }
